Fix code smells (#34)
* Sonar code smells fix